deploy/overlays/local/node-zio/components/dabs-demo-gateway/dabs-demo-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: dabs-demo-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: brickshuisarts.zio.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dabs-demo-route
spec:
  parentRefs:
    - name: dabs-demo-gateway
  hostnames:
    - brickshuisarts.zio.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dabs-demo
          port: 8800
